fix some webpage layout issues

--- a/_posts/2025-04-11-zotero.md
+++ b/_posts/2025-04-11-zotero.md
@@ -1,7 +1,7 @@
 ---
 title: 'Zotero: a Bibliography Management System'
 date: 2025-04-11
-permalink: /posts/2025/04/zotero/
+permalink: /posts/2025-04-11-zotero/
 tags:
   - Zotero
   - Bibtex
